remove gap below categories on homepage (bug 792977)

--- a/media/css/mkt/site.less
+++ b/media/css/mkt/site.less
@@ -140,9 +140,6 @@ body .loading-fragment {
             padding-top: 24px;
             padding-bottom: 12px;
         }
-        &:last-child {
-            padding-bottom: 12px;
-        }
     }
 }
 
